Added other general style and the content to the header section

--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -6,3 +6,37 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+
+
+// * TAG HTML
+body {
+    font-family: sans-serif;
+}
+
+img {
+    max-width: 100%;
+}
+
+
+
+// * CLASSES
+.d-flex {
+    display: flex;
+}
+
+.d-flex.al-center {
+    align-items: center;
+}
+
+.d-flex.js-center {
+    justify-content: center;
+}
+
+.d-flex.js-between {
+    justify-content: space-between;
+}
+
+.d-flex.wrap {
+    flex-wrap: wrap;
+}
